--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -33,20 +33,17 @@ install:
 - unpackfs
 - machineid
 - fstab
-- locale
+- localecfg
 - keyboard
 - users
-- hardwarecfg
 - networkcfg
 - hwclock
 - services
 - displaymanager
-- localegen
 - initcpiocfg
 - initcpio
 - grubcfg
 - bootloader
-- postcfg
 - umount
 
 # Phase 3 - postinstall.
