--- a/data/calamares.desktop
+++ b/data/calamares.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=Install Manjaro Linux
+Name=Install Alpha OS
 GenericName=Live Installer
 Comment=Install the operating system to disk
 Exec=sudo /usr/bin/calamares
-Icon=calamares
+Icon=system-software-install
 Terminal=False
 Type=Application
 Categories=System;
